// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canonical Media Asset Page A11y I can see the skip to content link 1`] = `"Waka go wetin de inside"`;

exports[`Canonical Media Asset Page Analytics ATI 1`] = `"<img height=\\"1px\\" width=\\"1px\\" alt=\\"\\" style=\\"position:absolute\\" src=\\"https://logws1363.ati-host.net?s=598343&amp;s2=70&amp;p=pidgin.media_asset.23248703.page&amp;x1=[urn:bbc:cps:5679389a-3ea6-0b40-9de4-f4d33d6bcd9f]&amp;x2=[responsive]&amp;x3=[news-pidgin]&amp;x4=[pcm]&amp;x7=[article-media-asset]&amp;x8=[simorgh-nojs]&amp;x9=[Simorgh:+Media+Pod+Build+First+CPS+Media+Asset+Page+in+Simorgh+with+the+Help+of+Drew+&amp;+&lt;+&gt;+-+BBC+News+Pidgin]&amp;x11=[2019-09-13T15:31:44.000Z]&amp;x12=[2019-11-20T12:24:25.000Z]&amp;x16=[Inspire%20me~Give%20me%20perspective~Keep%20me%20on%20trend]&amp;x17=[Opinion]\\"/>"`;

exports[`Canonical Media Asset Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/pidgin"`;

exports[`Canonical Media Asset Page Footer I can see the footer copyright and external linking text 1`] = `"© 2020 BBC. De external site no concern BBC. De way wey we de take go external link."`;

exports[`Canonical Media Asset Page Footer Link should match text and url 1`] = `
Object {
  "text": "BBC News, Pidgin",
  "url": "/pidgin",
}
`;

exports[`Canonical Media Asset Page Footer Link should match text and url 2`] = `
Object {
  "text": "Why you fit trust BBC News",
  "url": "https://www.bbc.com/pidgin/institutional-48528766",
}
`;

exports[`Canonical Media Asset Page Footer Link should match text and url 3`] = `
Object {
  "text": "How dem dey take use am",
  "url": "https://www.bbc.co.uk/usingthebbc/terms/",
}
`;

exports[`Canonical Media Asset Page Footer Link should match text and url 4`] = `
Object {
  "text": "As e concern BBC",
  "url": "https://www.bbc.co.uk/aboutthebbc",
}
`;

exports[`Canonical Media Asset Page Footer Link should match text and url 5`] = `
Object {
  "text": "Privacy Policy",
  "url": "https://www.bbc.co.uk/usingthebbc/privacy/",
}
`;

exports[`Canonical Media Asset Page Footer Link should match text and url 6`] = `
Object {
  "text": "Cookies",
  "url": "https://www.bbc.co.uk/usingthebbc/cookies/",
}
`;

exports[`Canonical Media Asset Page Footer Link should match text and url 7`] = `
Object {
  "text": "Call BBC",
  "url": "https://www.bbc.com/pidgin/institutional-42188215",
}
`;

exports[`Canonical Media Asset Page Footer Link should match text and url 8`] = `
Object {
  "text": "AdChoices / Do Not Sell My Info",
  "url": "https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/",
}
`;

exports[`Canonical Media Asset Page Footer Link should match text and url 9`] = `
Object {
  "text": "De way wey we de take go external link.",
  "url": "https://www.bbc.co.uk/help/web/links/",
}
`;

exports[`Canonical Media Asset Page Header I can see the branding 1`] = `"BBC News, Pidgin"`;

exports[`Canonical Media Asset Page Header Navigation link should match text and url 1`] = `
Object {
  "text": "Home",
  "url": "/pidgin",
}
`;

exports[`Canonical Media Asset Page Header Navigation link should match text and url 2`] = `
Object {
  "text": "Nigeria",
  "url": "/pidgin/topics/3d5d5e30-dd50-4041-96d5-c970b20005b9",
}
`;

exports[`Canonical Media Asset Page Header Navigation link should match text and url 3`] = `
Object {
  "text": "Africa",
  "url": "/pidgin/topics/d2c2ba68-f9ad-4185-a6d1-7f6437256735",
}
`;

exports[`Canonical Media Asset Page Header Navigation link should match text and url 4`] = `
Object {
  "text": "World",
  "url": "/pidgin/world",
}
`;

exports[`Canonical Media Asset Page Header Navigation link should match text and url 5`] = `
Object {
  "text": "Video",
  "url": "/pidgin/media/video",
}
`;

exports[`Canonical Media Asset Page Header Navigation link should match text and url 6`] = `
Object {
  "text": "Sport",
  "url": "/pidgin/topics/4063f80f-cccc-44c8-9449-5ca44e4c8592",
}
`;

exports[`Canonical Media Asset Page Header Navigation link should match text and url 7`] = `
Object {
  "text": "Entertainment",
  "url": "/pidgin/topics/1c3b60a9-14eb-484b-a750-9f5b1aeaac31",
}
`;

exports[`Canonical Media Asset Page Header Navigation link should match text and url 8`] = `
Object {
  "text": "Most popular",
  "url": "/pidgin/popular/read",
}
`;

exports[`Canonical Media Asset Page I can see a bulleted list item 1`] = `"<Media Asset Page>"`;

exports[`Canonical Media Asset Page I can see a bulleted list item with link: <Media Asset Page> 1`] = `"http://www.bbc.com/afrique/23248423"`;

exports[`Canonical Media Asset Page I can see related content: Audio, BBC News Pidgin One Minute News, 0,15 1`] = `"/pidgin/media-23147054"`;

exports[`Canonical Media Asset Page I can see related content: Image gallery, Kenya Elections Pictures: 8 August 2017 1`] = `"/pidgin/23146654"`;

exports[`Canonical Media Asset Page I can see related content: Lagos 'Gay' men Appear for Court, say Dem no dey Guilty 1`] = `"/pidgin/tori-23143754"`;

exports[`Canonical Media Asset Page I can see related content: Police Arrest 3 ontop Anambra Church Attack 1`] = `"/pidgin/tori-23145776"`;

exports[`Canonical Media Asset Page I can see the headline 1`] = `"Simorgh: Media Pod Build First CPS Media Asset Page in Simorgh with the Help of Drew & < >"`;

exports[`Canonical Media Asset Page I can see the timestamp 1`] = `"13 September 2019"`;

exports[`Canonical Media Asset Page Media Player a11y assistive technology can read the media player title 1`] = `"Media player"`;

exports[`Canonical Media Asset Page Media Player iframe with valid URL should be rendered 1`] = `"https://polling.test.bbc.co.uk/ws/av-embeds/cps/pidgin/23248703/p01kx42v/pcm"`;

exports[`Canonical Media Asset Page SEO Apple Touch Icon should match attributes 1`] = `
Object {
  "sizes": null,
  "url": "http://localhost:7080/pidgin/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Media Asset Page SEO Apple Touch Icon should match attributes 2`] = `
Object {
  "sizes": "72x72",
  "url": "https://news.files.bbci.co.uk/include/articles/public/pidgin/images/icons/icon-72x72.png",
}
`;

exports[`Canonical Media Asset Page SEO Apple Touch Icon should match attributes 3`] = `
Object {
  "sizes": "96x96",
  "url": "https://news.files.bbci.co.uk/include/articles/public/pidgin/images/icons/icon-96x96.png",
}
`;

exports[`Canonical Media Asset Page SEO Apple Touch Icon should match attributes 4`] = `
Object {
  "sizes": "128x128",
  "url": "https://news.files.bbci.co.uk/include/articles/public/pidgin/images/icons/icon-128x128.png",
}
`;

exports[`Canonical Media Asset Page SEO Apple Touch Icon should match attributes 5`] = `
Object {
  "sizes": "144x144",
  "url": "https://news.files.bbci.co.uk/include/articles/public/pidgin/images/icons/icon-144x144.png",
}
`;

exports[`Canonical Media Asset Page SEO Apple Touch Icon should match attributes 6`] = `
Object {
  "sizes": "152x152",
  "url": "https://news.files.bbci.co.uk/include/articles/public/pidgin/images/icons/icon-152x152.png",
}
`;

exports[`Canonical Media Asset Page SEO Apple Touch Icon should match attributes 7`] = `
Object {
  "sizes": "180x180",
  "url": "https://news.files.bbci.co.uk/include/articles/public/pidgin/images/icons/icon-180x180.png",
}
`;

exports[`Canonical Media Asset Page SEO Apple Touch Icon should match attributes 8`] = `
Object {
  "sizes": "192x192",
  "url": "https://news.files.bbci.co.uk/include/articles/public/pidgin/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Media Asset Page SEO Apple Touch Icon should match attributes 9`] = `
Object {
  "sizes": "384x384",
  "url": "https://news.files.bbci.co.uk/include/articles/public/pidgin/images/icons/icon-384x384.png",
}
`;

exports[`Canonical Media Asset Page SEO Apple Touch Icon should match attributes 10`] = `
Object {
  "sizes": "512x512",
  "url": "https://news.files.bbci.co.uk/include/articles/public/pidgin/images/icons/icon-512x512.png",
}
`;

exports[`Canonical Media Asset Page SEO Canonical link 1`] = `"http://localhost:7080/pidgin/23248703"`;

exports[`Canonical Media Asset Page SEO Dir attribute 1`] = `"ltr"`;

exports[`Canonical Media Asset Page SEO FB admins 1`] = `"100004154058350"`;

exports[`Canonical Media Asset Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Media Asset Page SEO Heading level 1 1`] = `"Simorgh: Media Pod Build First CPS Media Asset Page in Simorgh with the Help of Drew & < >"`;

exports[`Canonical Media Asset Page SEO Lang attribute 1`] = `"pcm"`;

exports[`Canonical Media Asset Page SEO Linked data should match text 1`] = `
Object {
  "@context": "http://schema.org",
  "@graph": Array [
    Object {
      "@type": "Article",
      "author": Object {
        "@type": "NewsMediaOrganization",
        "logo": Object {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/pidgin.png",
          "width": 1024,
        },
        "name": "BBC News Pidgin",
        "noBylinesPolicy": "https://www.bbc.com/pidgin/institutional-48528766#authorexpertise",
      },
      "dateModified": "2019-11-20T12:24:25.000Z",
      "datePublished": "2019-09-13T15:31:44.000Z",
      "headline": "Simorgh: Media Pod Build First CPS Media Asset Page in Simorgh with the Help of Drew & < >",
      "image": Object {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/pidgin.png",
        "width": 1024,
      },
      "mainEntityOfPage": Object {
        "@id": "http://localhost:7080/pidgin/23248703",
        "@type": "WebPage",
        "name": "Simorgh: Media Pod Build First CPS Media Asset Page in Simorgh with the Help of Drew & < >",
      },
      "publisher": Object {
        "@type": "NewsMediaOrganization",
        "logo": Object {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/pidgin.png",
          "width": 1024,
        },
        "name": "BBC News Pidgin",
        "publishingPrinciples": "https://www.bbc.com/pidgin/institutional-48528766",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/pidgin.png",
      "url": "http://localhost:7080/pidgin/23248703",
    },
  ],
}
`;

exports[`Canonical Media Asset Page SEO Linked data should match text 2`] = `
Object {
  "@context": "http://schema.org",
  "@type": "VideoObject",
  "description": "short",
  "duration": "PT5S",
  "embedURL": "https://polling.test.bbc.co.uk/ws/av-embeds/cps/pidgin/23248703/p01kx42v/pcm",
  "name": "alt-text world service clip",
  "thumbnailUrl": "https://ichef.test.bbci.co.uk/images/ic/1024x576/p01kx435.jpg",
  "uploadDate": "2018-12-20T11:06:51.000Z",
}
`;

exports[`Canonical Media Asset Page SEO OG description 1`] = `"This week, CPS media assets were visible in Simorgh for the first time. The pages were built out in a matter of weeks using existing Psammead Components."`;

exports[`Canonical Media Asset Page SEO OG image 1`] = `"http://ichef.test.bbci.co.uk/news/1024/branded_pidgin/6FC4/test/_63721682_p01kx435.jpg"`;

exports[`Canonical Media Asset Page SEO OG image alt 1`] = `"connectionAltText"`;

exports[`Canonical Media Asset Page SEO OG locale 1`] = `"pcm"`;

exports[`Canonical Media Asset Page SEO OG site name 1`] = `"BBC News Pidgin"`;

exports[`Canonical Media Asset Page SEO OG title 1`] = `"First CPS Media Asset Pages Appear on Heloo - BBC News Pidgin"`;

exports[`Canonical Media Asset Page SEO OG type 1`] = `"article"`;

exports[`Canonical Media Asset Page SEO OG url 1`] = `"http://localhost:7080/pidgin/23248703"`;

exports[`Canonical Media Asset Page SEO Page title 1`] = `"Simorgh: Media Pod Build First CPS Media Asset Page in Simorgh with the Help of Drew & < > - BBC News Pidgin"`;

exports[`Canonical Media Asset Page SEO Robots meta tag 1`] = `"noodp,noydir"`;

exports[`Canonical Media Asset Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Media Asset Page SEO Twitter creator 1`] = `"@BBCNews"`;

exports[`Canonical Media Asset Page SEO Twitter description 1`] = `"This week, CPS media assets were visible in Simorgh for the first time. The pages were built out in a matter of weeks using existing Psammead Components."`;

exports[`Canonical Media Asset Page SEO Twitter image alt 1`] = `"connectionAltText"`;

exports[`Canonical Media Asset Page SEO Twitter image src 1`] = `"http://ichef.test.bbci.co.uk/news/1024/branded_pidgin/6FC4/test/_63721682_p01kx435.jpg"`;

exports[`Canonical Media Asset Page SEO Twitter site 1`] = `"@BBCNews"`;

exports[`Canonical Media Asset Page SEO Twitter title 1`] = `"First CPS Media Asset Pages Appear on Heloo - BBC News Pidgin"`;
